<resources>
    <string name="app_name">Notepad</string>
    <string name="my_categories">My Categories</string>
    <string name="themes">Themes</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="project_title">Notepad</string>
    <string name="save">SAVE</string>
    <string name="undo">UNDO</string>
    <string name="more">More</string>
    <string name="delete">Delete</string>
    <string name="view_category">View Category</string>

    <string name="NoteDetailObject">NoteDetailObject</string>
    <string name="add_note_button">Add Note Button</string>
    <string name="enter_title">Enter title</string>
    <string name="enter_content">Enter content</string>
    <string name="add">Add</string>
    <string name="type_name">Type name</string>
    <string name="button_to_add">Button to Add</string>
    <string name="button_to_delete">Button to Delete</string>
    <string name="search">Search</string>
    <string name="button_to_search">Button to Search</string>
    <string name="sort">Sort</string>
    <string name="button_to_sort">Button to Sort</string>
    <string name="button_for_more">Button for More</string>
    <string name="type_category">Type category</string>
    <string name="button_to_update">Button to Update</string>
    <string name="enter_keyword">Enter keyword</string>
    <string name="select_all_notes">Select all notes</string>
    <string name="import_text_files">Import text files</string>
    <string name="export_notes_to_text_files">Export notes to text files</string>
    <string name="share">Share</string>
    <string name="export_to_text_file">Export to text file</string>
    <string name="categorize">Categorize</string>
    <string name="colorize">Colorize</string>
    <string name="covert_to_text">Covert to text</string>
    <string name="switch_to_read_mode">Switch to read mode</string>
    <string name="print">Print</string>
    <string name="show_formatting_bar">Show formatting bar</string>
    <string name="show_info">Show info</string>
    <string name="notes">Notes</string>
    <string name="uncategorized">Uncategorized</string>
    <string name="edit_categories">Edit Categories</string>
    <string name="backup">Backup</string>
    <string name="trash">Trash</string>
    <string name="settings">Settings</string>
    <string name="rate_the_app">Rate the app</string>
    <string name="help">Help</string>
    <string name="privacy_policy">Privacy policy</string>
</resources>