<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/navSearch"
        android:icon="@drawable/ic_search_24dp"
        android:title="@string/search"
        android:contentDescription="@string/button_to_search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/navSort"
        android:title="@string/sort"
        android:contentDescription="@string/button_to_sort"
        app:showAsAction="ifRoom" />


    <item
        android:id="@+id/navMore"
        android:title="@string/more"
        app:iconTint="@color/white"
        android:contentDescription="@string/button_for_more"
        app:showAsAction="never" />


    <!--  Later  -->
    <item
        android:title="@string/select_all_notes"
        android:contentDescription="@string/button_for_more"
        app:showAsAction="never" />

    <item
        android:title="@string/import_text_files"
        android:contentDescription="@string/button_for_more"
        app:showAsAction="never" />

    <item
        android:title="@string/export_notes_to_text_files"
        android:contentDescription="@string/button_for_more"
        app:showAsAction="never" />
</menu>