<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/edtName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:autofillHints="@string/type_name"
        android:ems="10"
        android:inputType="text"
        tools:ignore="LabelFor" />

    <ImageButton
        android:id="@+id/btnUpdate"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/button_to_update"
        android:scaleType="centerInside"
        app:srcCompat="@drawable/ic_pen"
        app:tint="@color/black" />

    <ImageButton
        android:id="@+id/btnDelete"
        app:tint="@color/black"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="4dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/button_to_delete"
        android:scaleType="centerInside"
        app:srcCompat="@drawable/ic_trash" />
</LinearLayout>